--- a/demo-web-mvc/src/main/resources/templates/events/form.html
+++ b/demo-web-mvc/src/main/resources/templates/events/form.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <form action="#" th:action="@{/events}" method="post" th:object="${event}">
-    <input type="text" title="name" th:field="*{name}" />
-    <input type="text" title="limit" th:field="*{limit}" />
+    <input type="text" name="name" th:field="*{name}" />
+    <input type="text" name="limit" th:field="*{limit}" />
     <input type="submit" value="Create" />
 </form>
 </body>
