--- a/demo-web-mvc/src/main/resources/templates/events/form.html
+++ b/demo-web-mvc/src/main/resources/templates/events/form.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 <form action="#" th:action="@{/events}" method="post" th:object="${event}">
+    <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Incorrect Data</p>
+    <p th:if="${#fields.hasErrors('limit')}" th:errors="*{limit}">Incorrect Data</p>
     <input type="text" name="name" th:field="*{name}" />
     <input type="text" name="limit" th:field="*{limit}" />
     <input type="submit" value="Create" />
