--- a/demo-web-mvc/src/main/resources/templates/events/form.html
+++ b/demo-web-mvc/src/main/resources/templates/events/form.html
@@ -5,11 +5,9 @@
     <title>Create New Event</title>
 </head>
 <body>
-<form action="#" th:action="@{/events}" method="post" th:object="${event}">
-    <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Incorrect Data</p>
-    <p th:if="${#fields.hasErrors('limit')}" th:errors="*{limit}">Incorrect Data</p>
-    <input type="text" name="name" th:field="*{name}" />
-    <input type="text" name="limit" th:field="*{limit}" />
+<form action="#" th:action="@{/events}" method="post">
+    <input type="text" name="name" />
+    <input type="text" name="limit" />
     <input type="submit" value="Create" />
 </form>
 </body>
